# AI_List_Generate

./: .env.compose.example  .gitignore  AGENTS.md  README.md  README.zh-CN.md  README_EN.md  docker-compose.yml  requirements.txt
.codex/: config.toml
backend/: .dockerignore  .env.compose.example  .env.example  Dockerfile  litellm_config.yaml  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/eval/: run_eval.py
backend/app/models/: constants.py  db_ai_model_route.py  db_category.py  db_notice_detail.py  db_product_des_detail.py  db_product_src_detail.py  db_product_task_detail.py  db_sys_ai_prompt.py  db_sys_client_conf.py  db_sys_conf.py
backend/app/schemas/: common.py  list.py  ocr.py  translate.py
backend/app/services/: __init__.py  category_matcher.py  embedding_generator.py  llm.py  multimodel_generator.py  shop.py  tasks.py  text_generator.py
backend/app/sql/: create_tables.sql
backend/app/test_api/: test_02_batch_translate.py  test_03_ocr.py  test_embedding.py
backend/app/utils/: cache_utils.py  dependencies.py  embedding_utils.py  get_data_utils.py  param_utils.py  qwen_utils.py  response_utils.py  similar_utils.py  str_text_utils.py
backend/eval/: __init__.py  langsmith_shop_step1.py  langsmith_shop_step2.py  langsmith_shoplist.py  langsmith_translate.py  run_eval.py
backend/eval/datasets/: shop_eval.jsonl
backend/sft/: __init__.py  bootstrap_multisite_from_testcsv.py  modelscope_data.py  prepare_multisite_bundle_sft.py  prepare_product_desc_sft.py
backend/sql/: ai_list_docker.sql
(+94 files in other folders)
