[project]
name = "ai-list-generate-backend"
version = "0.1.0"
description = "FastAPI backend for AI listing generation, translation, and OCR."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "addict>=2.4.0",
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "anyio==4.13.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "click==8.3.1",
  "colorama==0.4.6",
  "datasets>=4.8.4",
  "distro==1.9.0",
  "fastapi==0.135.2",
  "greenlet==3.3.2",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "idna==3.11",
  "jiter==0.13.0",
  "langsmith>=0.7.32",
  "modelscope>=1.35.4",
  "numpy==2.4.3",
  "openai==2.29.0",
  "pandas==3.0.1",
  "pydantic==2.12.5",
  "pydantic-core==2.41.5",
  "pymysql==1.1.2",
  "python-dateutil==2.9.0.post0",
  "requests==2.32.5",
  "scikit-learn>=1.8.0",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sqlalchemy==2.0.48",
  "starlette==1.0.0",
  "tqdm==4.67.3",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "tzdata==2025.3",
  "urllib3==2.6.3",
  "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0",
  "ruff>=0.11.0,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests/api"]

[tool.ruff]
line-length = 100
target-version = "py311"
